fix overflow in x direction

--- a/src/global.css
+++ b/src/global.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .App {
   width: 100vw;
   height: 100vh;
